--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,41 +1,41 @@
 ---
-title: 2022.2.9大直播后记：北京冬奥会开幕式的假
+title: 诺贝尔医学奖得主 Luc Montagnier 教授去世的消息未被证实
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1981956/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1981981/)
 
-**整理：Rianna、Lucy Liu
-编辑：Candy**
+撰稿：小雨
+![](https://assets.gnews.org/wp-content/uploads/2022/02/FWU374ZYKL66EM5YPUEIP2IDCQ-1.jpg)网络图片
+12小时之前，社交媒体上传播着2008 年诺贝尔医学奖得主 Luc Montagnier 教授过世的消息。但到目前为止，还没有官方消息或其他法国和国际媒体证实这一消息。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-420.png)
+法国网站France Soir在Twitter2 月9日上发布如下推文：
 
+“*2008 年诺贝尔医学奖得主 Luc Montagnier 教授于 2022 年 2 月 8 日在他的孩子们面前安详地去世。*
+*1932 年 8 月 18 日 – 2022 年 2 月 8 日*
 
-请问中国同胞们，你们谁到现场去看过开幕式了？我的战友，郭文贵的战友，爆料革命的核心人物，未来你会看到视频出来，有人吗？！
+*愿这位伟人的灵魂安息！*”
 
-现场所有的外国人，个个惊慌失措。但是所有人被那个大屏、被张艺谋导演震撼了，因为外国人去的国家太小。你把非洲那些国家，甭说，你看给他拿一个摩托罗拉手机，都觉得是高科技。你拿个过去的大哥大都觉得高科技、外星科技，他们见过什么世面呢？！忽悠他们，康佳大屏一搞，就把一个电脑放在人眼睛上，你给他弄啥他看啥。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-971.png)[推特链接](https://twitter.com/france_soir/status/1491361948407336971)
 
-结果是真的，现场那种政治操控的巨大威胁。普京看透了，说，你现场根本就没人，你吹了半天根本没人，这些东西你接下去没法解释的。然后普京多一分钟都不想呆在这儿。你还不兑现，特别是黄金，作为储备兑现，作为法币。最后翻脸了，人家不干了。
+网站France Soir在几小时后发布了一篇悼文：
 
-大家记住啊，这时候谁去了？马克龙作为法国的三驾马车（之一）、两架马车德国和法国去俄罗斯见普京：求求你了，大爷！你不要打乌克兰，咱好好说！你的天然气，所谓的北溪2号，咱可以谈。法国给你承诺，买你3000亿美元的所有的天然气，你不打乌克兰行不行？然后再聊聊在北京的看法。 本来见面是三个小时，最后谈了五个小时。
+*Luc Montagnier 教授（1932 年 8 月 18 日 – 2022 年 2 月 8 日），在塞纳河畔纳伊的美国医院去世，享年89岁。教授最忠实的合作者之一 Gérard Guillaume 医生告诉我们，Luc Montagnier 教授在孩子们的陪伴下平静地离开了。*
 
-听说普京大谈北京，他说，“你们老说我们跟中国亲，你们这帮孙子不跟我玩啊。咱们是亲兄弟啊，你不跟我玩，我得找个人当托儿啊。”他说，“你看他们开幕式完全都是假的，雪都是假的。”普京的其中一个女朋友就是滑雪芭蕾舞的，去都不让她去。那个雪污染以后，普京就说：我当场问了中国官员，中国官员说没事儿。那个雪的化学成分污染大地，万年不会散去，他们说没事儿！
+*Luc Montagnier 教授是一位生物学家和病毒学家，最重要的是，教授还是一位为科学而活的具有非凡智慧的人。除了因发现艾滋病病毒而获得 2008 年诺贝尔医学奖外，教授还与世界上最伟大的科研机构一起工作。Luc Montagnier 教授担任 CNRS名誉研究主任，巴斯德研究所教授，纽约城市大学皇后学院分子与细胞生物学中心主任，上海交通大学研究所所长。多年来，Luc Montagnier 教授通过研究支持了科学院和美国国家医学院。为此，他获得了无数的奖项和荣誉。*
 
-制雪机是哪儿造的？一大半是俄罗斯造的，人家是有规格的，干啥用的都是特定的。中国全拿山上去，在一个完全没有雪的雪山上还弄出一个滑雪跑道，然后搞了一个全球的冬奥会。这从当年1928年在法国举行的冬奥会开始，到今天就是个人类的耻辱。
+*尽管Luc Montagnier 教授年事已高，尽管他在人生的晚年遭受了所有批评，尤其是来自科学界的一部分，但教授一直为自由科学而奋斗。我们很幸运能够在 FranceSoir 多次接待他，并希望将所有荣誉都授予他。*
 
-然后普京给马克龙很好地聊了聊北京的经历，说：他们太在乎形式主义了，吃个晚餐啊，搞了一大堆，要让我点评，我才不跟他们吃去呢。染上病怎么办呢？中东啊，中东那几个傻国家掐架掐得要死，都想在中共国表现我是中东老大。
+曾邀请Luc Montagnier 教授参加米兰示威活动的参议员 Gianluigi Paragone 在他的 Facebook 个人资料中谈到了这件事。他表示对此也知之甚少或一无所知：“我无法确认或否认。我只知道几天来我们一直试图与他的随行人员取得联系，但我们没有成功。”
 
-最后一分钟，沙特王子说：钱不给是吧？我同意你用人民币结算石油了，现在需要美元呐！你给我弄500亿、1000亿美元，先让我接上点美元。中共说：“不行，你来了以后再说。”“那不行，我去之前你先给我。”沙特跟中共国之间，就像郭宝胜和夏业良一样。
+**简评：**
 
-普京讲出这些过程的时候，你看看中东他们，就这样被共产党玩。沙特王子最有钱却是世界上最没有现金的。然后说，“那就以我染上病毒为由我不去了，美国还威胁我，不让我参加，你不给我钱，我咋去啊？”这个当时是沙特排在第二号的人物，什么泰国诗琳公主等等就是打酱油的。
+今天读到此消息，只有震惊，也有不少的猜想。过去两年中，高龄的Luc Montagnier 教授到处奔波做演讲和接受采访，宣传病毒和疫苗的真相，用自己的学术声望去试图唤醒被洗脑的民众。我们钦佩Luc Montagnier 教授的学识和人品，从教授身上我们看到一个真正尊重科学和真理的学者和科学家。
 
-***发布：Candy***
+希望是虚惊一场。无论如何，我们为Luc Montagnier 教授祈祷。
 
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+新闻链接：[Yellow on Luc Montagnier, guru of no vax. France Soir: “He’s dead”. But there are no confirmations](https://www.unionesarda.it/en/yellow-on-luc-montagnier-guru-of-no-vax-france-soir-he39-s-dead-but-there-are-no-confirmations-sc5q6ize)
 
+[L’éminent professeur Luc Montagnier s’est éteint le 8 février 2022](https://www.francesoir.fr/societe-sante/leminent-professeur-luc-montagnier-sest-eteint-le-8-fevrier-2022)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
