--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,23 +1,60 @@
 ---
-title: 徐州八孩母亲事件再看中共的邪恶本性
+title: 中国共产党是一个鲁莽、不人道、不负责任的政权
 ---
-`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/1982110/)
+`美国政要直译推` [轉載自GNews](https://gnews.org/zh-hans/1982157/)
 
-撰稿：北纬农夫
+参议员玛莎.布莱克本： 中国共产党是一个鲁莽、不人道、不负责任的政权。 他们不应该获得世界舞台来举办今年的奥运会。
 
-近日，各大国际媒体相继报道了徐州八孩母亲的生活惨状，世界上和平善良的人们难以置信这样的情况发生在世界第二大经济体的中国。北京正直冬奥会期间，这件人间惨剧被民间和国际媒体竞相报道，但中共官媒除两次充满谎言的官方通报外，一片沉寂。当地警方甚至以坐牢威胁前去探望的志愿者，这一切再一次以铁的事实揭露了共产党以假治国、以黑治国、以贪治国的邪恶本质！把好话说尽，把坏事干绝，这描绘共产党在中国的非法统治再适合不过！
 
-首先，让我们看看习近平2021年在纪念世界第四届妇女大会上的发言：“要把保障妇女权益必须上升为国家意志，我们要扫清障碍、营造环境，最大限度调动广大妇女积极性、主动性、创造性，增强她们的获得感、幸福感、安全感。我们要充分发挥政府作用，广泛调动社会力量，支持和帮助妇女享有出彩的人生。”
 
-多么熟悉的字眼、多么庄严的承诺、七十年来一次比一次说得好！保护妇女上升为国家意志、推动妇女走在时代前列、支持和帮助妇女享有出彩的人生！中共统治下的妇女是怎样出彩的人生呢？战争年代，共产党往往将妇女儿童置于最危险的境地，无数个江姐、刘胡兰、小兵张嘎、王二小都是他们树立的榜样，引导鼓励妇女儿童去牺牲！共产党执政后，无论是位高权重的王光美、丁玲等共产党体系里的光鲜人物，还是遥远乡村的悲情母亲杨改兰、徐州八孩母亲，都无法逃脱共产党治下的悲惨命运！
+> The Chinese Communist Party is a reckless, inhumane, and irresponsible regime. 
+> 
+> They should have never been given the world stage to host this year’s Olympic Games.
+> — Sen. Marsha Blackburn (@MarshaBlackburn) [February 9, 2022](https://twitter.com/MarshaBlackburn/status/1491548314034130946?ref_src=twsrc%5Etfw)
 
-让我们再看看习近平的夫人彭丽媛，联合国亲善大使、联合国教科文组织促进女童和妇女教育特使在2021年7月上合组织妇女教育与减贫论坛上的演讲：“经过不懈努力，中国取得脱贫攻坚全面胜利，中国亿万妇女彻底摆脱了贫困。我们要聚爱成行，久久为功，持续深化妇女教育与减贫合作，让教育之光照亮妇女希望之路，让更多妇女享有人生出彩的机会。”
 
-各位，你看到了吗？又是出彩！中国亿万妇女彻底摆脱了贫困！她们摆脱了什么？她们衣不蔽体、食不果腹，她们没有名字、没有自由，她们没有牙齿、没有灵魂，她们至今还带着沉重的锁链！中共统治以来，在中国这片知礼义廉耻的的土地上，妇女从来就没有获得过真正的自由、尊严！她们就是我们的兄弟姐妹、母亲妻女！
 
-这就是当下共产党治理下的中国，所有说的一切都是虚假的，所有做的一切都是邪恶的！我们一定要记住这些共产党统治下忍辱负重、甚至惨死的中华女性,她们有 “自由无价，生命有涯，宁为玉碎，以殉中华”的北大学生林昭、坚持真理的人大才女张志新、40多年苦苦找寻真相的天安门母亲们、陪叔叔睡觉的红黄蓝幼儿园呀呀学童、山东大学服务黑人的女大学生、大街上被暴力执法的母亲们、计划生育政策下被非人对待的母亲和抛弃的婴儿们、维权路上那些弱不禁风的瘦弱身影……
+众议员马乔丽·泰勒·格林： 几十年来，美国政客出卖了美国，用他们的爱国主义换取中国的财富。 这张肮脏的中国奥运会的图片概括了这一切。 美国必须做出选择。 不要再和中国共产党打交道，把出卖我们国家的叛徒赶出去。
 
-郭文贵先生曾经提议，未来新中国联邦将中共那个所谓的‘中国人民英雄纪念碑’改为‘中华英雄母亲纪念碑’，让我们永远缅怀这些英雄的母亲，捍卫她们的尊严、完成她们的寄托，将自由带回中华这片我们永远守护的土地！
+
+
+> For decades US politicians have sold out America and traded their patriotism for riches from China.
+> 
+> This picture of the filthy Olympics in China sums it all up.
+> 
+> America must make a choice. 
+> 
+> No more deals with the CCP and throw out the traitors who sell out our country. [pic.twitter.com/55gx4em0WQ](https://t.co/55gx4em0WQ)
+> — Rep. Marjorie Taylor Greene (@RepMTG) [February 9, 2022](https://twitter.com/RepMTG/status/1491450892897644549?ref_src=twsrc%5Etfw)
+
+
+
+前国务卿迈克.蓬佩奥： 俗话说，自由不是免费的。 它只给那些为保护它而愿意付出有时是沉重代价的人们。
+
+
+
+> Freedom is not free, as the saying goes. It is only for those who are willing to bear the sometimes-difficult price of preserving it.
+> — Mike Pompeo (@mikepompeo) [February 9, 2022](https://twitter.com/mikepompeo/status/1491414576436748298?ref_src=twsrc%5Etfw)
+
+
+
+参议员卢比奥新闻办公室： 参议员卢比奥、布莱克本和泰尼，提出了《排除中国共产党意外方法案》，该法案将指导证监会，要求在美国交易所上市的公司确认其运营中是否存在中共组织。
+
+
+
+> Sen Rubio, Sen [@MarshaBlackburn](https://twitter.com/MarshaBlackburn?ref_src=twsrc%5Etfw) & [@RepTenney](https://twitter.com/RepTenney?ref_src=twsrc%5Etfw) introduced the No Chinese Communist SURPRISE Parties Act, which would direct the [@SECGov](https://twitter.com/SECGov?ref_src=twsrc%5Etfw) to require companies listed on U.S. exchanges to identify whether a [#CCP](https://twitter.com/hashtag/CCP?src=hash&amp;ref_src=twsrc%5Etfw) organization is present in the firm’s operations.[https://t.co/tq0DSBhp0H](https://t.co/tq0DSBhp0H)
+> — Senator Rubio Press (@SenRubioPress) [February 9, 2022](https://twitter.com/SenRubioPress/status/1491464790308495361?ref_src=twsrc%5Etfw)
+
+
+
+比尔·格茨: [#中共国](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1%E5%9B%BD?src=hashtag_click) 经济衰退威胁最高领袖 [#习近平](https://twitter.com/hashtag/%E4%B9%A0%E8%BF%91%E5%B9%B3?src=hashtag_click) 的重振新毛贼东共产主义政策。
+
+
+
+> China’s economic downturn threatens supreme leader Xi Jinping’s policy of reimposing neo-Maoist communism [https://t.co/0iuq5ZmPEj](https://t.co/0iuq5ZmPEj)
+> — Bill Gertz (@BillGertz) [February 10, 2022](https://twitter.com/BillGertz/status/1491594617573105665?ref_src=twsrc%5Etfw)
+
+
 
  
 
