--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,25 +1,40 @@
 ---
-title: 美国破获史上最大比特币盗窃案 金额高达45亿美元
+title: 单伟建用虚假无担保票据大肆攫金
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1981847/)
+`加拿大温哥华扬帆农场 Himalaya Sailing Farm (CA)` [轉載自GNews](https://gnews.org/zh-hans/1981874/)
 
-**撰稿：日本东京方舟农场  海星**
+加拿大温哥华扬帆农场 薇文viven
 
-2月8日，美国司法部宣布已经破获史上规模最大的比特币盗窃案，金额高达45亿美元。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-147.jpg)（图片来源：Unsplash 图库）
-据《自由时报》报导，美国司法部于2月8日表示，警方已经在曼哈顿逮捕了一对涉嫌盗窃比特币的夫妻。他们被指控在2016年黑客入侵了数位货币交易中心「Bitfinex」，并盗走11万9754枚比特币进行洗钱。目前这些比特币价值高达45亿美元。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/a-7-edited.png)图片来源：asia times
 
-根据法庭文件，在美国国税局、联邦调查局及国土安全部等机构的繁复调查下发现部分失窃的比特币先被转移到嫌疑人控制的电子钱包，接着透过复杂的加密货币交易从电子钱包移出。截至目前，美国司法部已追回9万4000多枚比特币，价值约36亿美元，后续将归还给受害者。
 
-司法部副部长摩纳可（Lisa Monaco）在声明中表示，该案是司法部历来查获的金融犯罪案中涉及金额最高的案件，加密货币不是犯罪分子的避风港。
+单伟建用虚假的担保票据，从 “PAG 太盟集团”攫取资金，倒手到自己名下的上市公司。
 
-参考链接：
-1.[https://news.ltn.com.tw/news/world/breakingnews/3823807](https://news.ltn.com.tw/news/world/breakingnews/3823807)
-2.h[ttps://www.cna.com.tw/news/aopl/202202090004.aspx](//www.cna.com.tw/news/aopl/202202090004.aspx)
+单伟建 2021年4月在开曼群岛注册成立了一家名为“戈壁收购”的空壳公司，随即在纳斯达克上市。承销商三家：花旗银行 (Citibank)、高盛亚洲 (Goldman Sachs (Asia) L.L.C. ) 和瑞银投资 (UBS Investment Bank) 。
 
-素材采编：海星
-编辑：老孙
-发布：爱放飞
+上市后共募集资金约$2.87亿美元，其中包括三大承销商超额配售的 $542.5万美元，全部进入单伟建的私人信托账户，委托美国新成立的“大陆股票转让&信托公司” (Continental Stock Transfer & Trust Company)进行管理，没留一分钱给“戈壁收购”。“戈壁收购”如何维持经营?
+
+1、“戈壁收购” 发行 “无担保票据” 给 PAG 太盟集团，立即套现 $100万美元，支付管理人员薪酬。这一票据无利息，若“戈壁收购”在两年内无法实现借壳上市的发行目的，则无需偿还欠款， “太盟集团”将全部免除其债务。
+
+2，”戈壁收购“向“太盟集团”出售10,851份 “私募认股权证” ，为公司带来了10.85万美元的进账，作为公司维护费用。
+
+“PAG 太盟集团” 将这些债务以“内保外贷”形式，通过国内金融机构，转嫁到中国老百姓身上。此外 “PAG 太盟集团” 还从投资国内各行业获得巨额利益。
+
+郭文贵先生揭露盗国贼们玩巨额的虚假票据游戏，这只是九牛一毛。每个中国百姓身上都插着抽血管，财富被多重抽吸，通过无数像“戈壁收购”这样的公司，流入这些盗国贼家的私人信托账户，背上的是子子孙孙还不完的沉重债务。
+
+不灭中共，天理难容！
+
+参考资料：
+
+[https://www.sec.gov/Archives/edgar/data/0001854593/000110465921047559/filename1.htm](https://www.sec.gov/Archives/edgar/data/0001854593/000110465921047559/filename1.htm)
+
+[https://www.sec.gov/Archives/edgar/data/1854593/000110465921093691/tm2122403d1\_8k.htm](https://www.sec.gov/Archives/edgar/data/1854593/000110465921093691/tm2122403d1_8k.htm)
+
+[INVESTMENT MANAGEMENT TRUST AGREEMENT](https://contracts.justia.com/companies/gobi-acquisition-corp-13143/contract/186384/)
+
+* * *
+
+编译撰稿：薇文viven 编辑发稿：硫酸羟氯喹64
 
  
 
