--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,30 +1,30 @@
 ---
-title: 澳大利亚和立陶宛加强合作 携手应对中共施压
+title: 2022.2.9大直播后记：智慧灭共
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1981808/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1981843/)
 
-**撰稿：日本东京方舟农场  幽蘭自得**
+**整理：清水冷香、Lucy Liu
+编辑：Candy**
 
-2月9日，澳大利亚和立陶宛外交部长同意加强合作来因应战略挑战，尤其是来自中共国的施压。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-96.png)图为立陶宛外长蓝斯柏吉斯（Gabrielius Landsbergis）和澳大利亚外长潘恩（Marise Payne）（图片来自美联社）
-据《中央社》报道，立陶宛外长蓝斯柏吉斯（Gabrielius Landsbergis）和澳大利亚外长潘恩（Marise Payne）9日在澳大利亚国会大厦举行会谈。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-419.png)
 
-会谈中，蓝斯柏吉斯说：“中（共）国将经济和贸易作为一种政治工具，或者甚至可说是一种政治武器，有很长的一段时间，澳大利亚可能是遭对付的主要例子之一。如今立陶宛也成为目标…但很明显，我们绝对不会是最后一个。”
 
-他还说：“我们需要提醒像中（共）国或任何其他想将贸易作为武器的国家，全球志同道合的国家拥有各种有助于抵御胁迫、不屈服于政治和经济压力的工具和法规。”
+中、美、俄在冬奥会以后，实际上是三角力量的实质性的改变。（对）爆料革命会有什么受益，什么影响？
 
-潘恩表示，她认同蓝斯柏吉斯的观点，志同道合的国家务必采取一致作法合作，维护基于规则的国际秩序、自由开放的贸易、透明度、安全和稳定。
+灭共几乎是人类万年来最难的一件事儿，大家千万别想当然，或者必然，或者容易，那是犯了极端错误，那就犯了同共产党同样的错误。灭共，我们不是对任何人的责任，也不是我们的保证，也不是我们必须做的事。但是我们必须灭掉共产党。
+ 
+怎么灭掉共产党？智慧地灭掉共产党。我们要灭全人类最大的一个坏蛋——共产党，人家都觉得是不可能的。咱没有军队，没有任何组织，还不流血，你去想一想。你可以纵观人类历史，地球这百万亿年来，地球和银河系里没人说过，说不流血要改变一个这么大的流氓组织、黑社会组织。想都没想过，不要说做，想都没想过。
 
-据悉，随着澳中关系恶化，澳大利亚出口商因中共国官方和非官方的贸易壁垒损失数百亿美元，这些贸易障碍项目涵盖煤炭、葡萄酒、牛肉、小龙虾和大麦。
+释迦牟尼没这么说过，阿拉也没这么说过，耶稣也没这么说过，天主也没这么说过，没有人这么说过。我们中国的老天爷，玉皇大帝都没这么说过。 我们现在所干的事情，几乎是人类上，地球上，物理上不可能的事。但是真的拜万佛万神所赐，我们真的是在接近完成，而且一定会完成。消灭这个共产党！
 
-立陶宛则是因为去年8月允许台湾在其首都维尔纽斯（Vilnius）开设的代表处使用台湾而不是台北的名称，激怒中共当局，从而受到中共的政治制裁和经济施压。
+***发布：Candy***
 
-参考链接：
-[https://www.cna.com.tw/news/aopl/202202090260.aspx](https://www.cna.com.tw/news/aopl/202202090260.aspx)
-
-素材采编：幽蘭自得
-编辑：老孙
-发布：爱放飞
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场](https://twitter.com/HimalayaAthena1)[Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场](https://www.gettr.com/user/himalayaathena)[Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场](https://discord.gg/KQQVvwBNvm)[Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)[GTV](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)[直播](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)[1](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)[台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
