--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,84 +1,33 @@
 ---
-title: 中国人噩梦的开始，国人奴性的根源 ——《驭民五术》
+title: 朗诵佳作欣赏《匆匆》
 ---
-`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/1981802/)
+`喜马拉雅纽约磐石农场` [轉載自GNews](https://gnews.org/zh-hans/1981842/)
 
-作者：纽约香草山教育部 – 蒙古鸿雁
-![](https://cdn.discordapp.com/attachments/902205163622776852/923974543167590420/image0.jpg)
-中国第一本禁书是两千多年前先秦的商鞅撰写的《商君书》。
+视频编辑：Jenny / 字幕：文朗
+[朱自清的散文《匆匆》写于1922年3月](https://baike.baidu.com/item/%E5%8C%86%E5%8C%86/1577840)，恰逢“五四”运动落潮期。当时的“五四”知识青年忙于救国，忙于追求进步；他们备受当时政治环境的压迫，却没有停止追求进步的脚步；他们苦恼，彷徨，却在冷静的沉思后，继续追赶人生的路。
 
-在这本书中，始终强调朝廷是与民众对立的关系，秉持的指导思想是民强国弱、民弱国才能强。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/驭民五术-2.jpg)
-“弱民”成为了强大国家机器的核心思想。
+**历史又在重演，一百年过去了，五四青年换成了新中国联邦人，换做遍布在五湖四海全球各地的“你我他她”，这一次是在文贵先生的带领下，不变的主题依然是要替中国人民追求“民主，法制和自由”，这就是我们的使命！不但誓将共产党送进地狱，同时也要与全世界的黑暗势力作斗争，传播病毒疫苗真相。多少屈辱与不公，但是挡不住我们追求正道主义，重建中华文明的决心。**
 
-接下来的秦统治者们提炼了《商君书》的“精髓”，形成了一直延续至今、并被共产党演绎得炉火纯青、残暴统治人民的《驭民五术》。
+*朱自清《给俞平伯的信》一文中写到：“生活中的各种过程都有它独立的意义和价值——每一刹那有它的意义与价值!每一刹那在持续的时间里，有它相当的位置。”*
 
-这是中国人噩梦的开始，也是国人奴性的根源。
+《匆匆》全文：
 
-何为《驭民五术》？
+燕子去了，有再来的时候；杨柳枯了，有再青的时候；桃花谢了，有再开的时候。但是，聪明的，你告诉我，我们的日子为什么一去不复返呢？- – 是有人偷了他们罢：那是谁？又藏在何处呢？是他们自己逃走了罢：现在又到了哪里呢？
 
-就是愚民、弱民、疲民、辱民、贫民。
+我不知道他们给了我多少日子；但我的手确乎是渐渐空虚了。在默默里算着，八千多日子已经从我手中溜去；像针尖上一滴水滴在大海里，我的日子滴在时间的流里，没有声音，也没有影子。我不禁头涔涔而泪潸潸了。
 
-愚民就是控制、统一思想和价值观，让你脑子想什么统治者说了算，不能让老百姓有独立思考的能力，不能产生自己的想法。
+去的尽管去了，来的尽管来着；去来的中间，又怎样地匆匆呢？早上我起来的时候，小屋里射进两三方斜斜的太阳。太阳他有脚啊，轻轻悄悄地挪移了；我也茫茫然跟着旋转。于是洗手的时候，日子从水盆里过去；吃饭的时候，日子从饭碗里过去；默默时，便从凝然的双眼前过去。我觉察他去的匆匆了，伸出手遮挽时，他又从遮挽着的手边过去，天黑时，我躺在床上，他便伶伶俐俐地从我身上跨过，从我脚边飞去了。等我睁开眼和太阳再见，这算又溜走了一日。我掩着面叹息。但是新来的日子的影儿又开始在叹息里闪过了。
 
-弱民就是“以弱驱强、以奸驭良”。
+在逃去如飞的日子里，在千门万户的世界里的我能做些什么呢？只有徘徊罢了，只有匆匆罢了；在八千多日的匆匆里，除徘徊外，又剩些什么呢？过去的日子如轻烟，被微风吹散了，如薄雾，被初阳蒸融了；我留着些什么痕迹呢？我何曾留着像游丝样的痕迹呢？我赤裸裸来到这世界，转眼间也将赤裸裸的回去罢？但不能平的，为什么偏要白白走这一遭啊？
 
-利用弱者对有钱有能力的人施加各种制约，全方位进行打击削弱，让有能力的人没办法与统治者对抗，最终达成用弱者干掉强者，最后只剩下弱者，达到更加便于统治者统治管理百姓的目的。
+你聪明的，告诉我，我们的日子为什么一去不复返呢？
 
-疲民就是让你为了生计而疲于奔命，没时间产生想法，满脑子只剩下养家糊口的念头，让你没精力对抗强权。
+朗诵：文朗
 
-贫民就是横征暴敛、加强赋税让你积累不了财富没什么钱，但是会让你有口饭吃别饿死，这样就会让百姓心理上没有了安全感。
+撰稿/视频制作：Jenny
 
-当权者再玩弄一些小花招，给一些小恩惠，让一直贫苦的百姓一时间不知如何是好并感激涕零。
-
-“无恒产则无恒心”，也就没有了心力去对抗不公，也就安分老实了，为了不饿死也就听命并依赖于强权了。
-
-心理学上有一个专有名词叫“斯德哥尔摩综合症”， 是指犯罪过程中的被害人对于加害人产生情感认同、依赖等，并结成融洽、友好关系，甚至反过来帮助加害人的一种情感联结。
-
-“斯德哥尔摩综合症”就很好地解释了这一点。
-
-辱民就是让老百姓没有尊严。统治者认为尊严不属于百姓，并鼓励相互检举揭发。百姓相互之间怀疑没有了信任感，也就无法凝聚抱团，对执政者也就无法构成威胁。
-
-让百姓不知道什么是尊严，剩下的强权的威严了。被剥夺了一切的没有尊严的百姓就会变的低眉顺眼、唯唯诺诺、战战兢兢、俯首帖耳，就更容易被强权践踏。
-
-但“存在”就会有平衡，倾斜的久了就会有“力”来介入让失衡回归平衡。
-
-阴邪的商鞅虽然给帝王们贡献了残暴的驭民术，但并未为自己和残暴的统治者提供退路，商鞅最终被秦惠文王杀掉并被“车裂”，秦王朝也未能长命。
-
-“残暴治理”理念的“开创者”或“升级者”最后都会被自己的“创意”灭掉，这在世界历史上已上演了无数次。
-
-“驭民五术”在中国存活了两千多年后，非法夺取政权的CCP不但全盘接受，并将《驭民五术》驾驭使用的登峰造极，让这个曾经勤劳、善良、智慧、勇敢的民族变得懦弱、自私、愚昧无知，成为世界的弃儿并正在走向地狱的路上。
-
-但共产党残暴统治中国人民的同时也在迎它接走向覆灭末日的到来。
-
-2020年六月四日一个象征着中华民族新生的新中国联邦诞生了。
-
-在郭文贵先生引领的新中国联邦爆料革命下，中国人民正在从沉睡中被唤醒～
-
-一颗颗苏醒的希望星火闪烁在世界各地，并迅速连结形成燎原之势，烧向正在摧毁中华民族和世界的邪魔共产党。
-
-貌似强悍而内在已腐败溃烂、千疮百孔的共产党的庞大躯体，正在熊熊燃烧的烈火中扭曲挣扎。
-
-而奴役了中国人民两千多年的“驭民术”也正随着共产党那发出哀嚎、腐臭的躯壳一同走向炼狱。
-
-它们将被铲除殆尽、从这个星球上灰飞烟灭！
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e-2.jpg)
-
-**校对/发稿：**Fei797
-
-**更多资讯，更多关注**
-
-[**纽约香草山农场GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-![](https://cdn.discordapp.com/attachments/902205163622776852/923974543167590420/image0.jpg)
-
-
+配乐/字幕：文朗
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GTV.jpg)磐石农场Discord![](https://assets.gnews.org/wp-content/uploads/2022/01/GTV.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/01/b3df4b36-df11-4361-a8f5-6c7e5f9da569.jpg)
 
 
  
