--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,34 +1,17 @@
 ---
-title: 2月9日大直播后记：独裁国家政权都崇拜暴力美学
+title: 【粤语配音】2022年2月9日：至关重要的三件大事
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1982031/)
+`MOS香港部` [轉載自GNews](https://gnews.org/zh-hans/1982055/)
 
-整理：清水冷香 Lucy Liu
-编辑：文泓
+紐約香草山-香港部
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/15-2.png)图片来源：墨尔本雅典娜农场设计组
+所以今天有三件大事，第一，我们第一次打开了沼泽地，真正的在法庭上公开较量，找回中国人在西方，被共产党藏匿的财富，第一道大门打开了。
 
+这是一个，第二个七哥宣布，七哥将离开美国到伦敦和日本生活，直接面对共产党，从现在的美国以美灭共、以共灭共，长距离灭共，直接接触，这是第二个宣布。
 
-这次北京冬奥会的“以假为真”，历史上的苏联也一样。在1935年和1980年两届奥运会，你问当时参加的（国家），哇塞，它们都太伟大了！这种力量没人能改变，谁也干不了它（独裁国家）。
+第三个七哥将在法律上申请，变得一无所有，做好一切最坏的事情发生，万一共产党弄个导弹导到日本去呢，万一给我下毒，毒死我呢是吧？，所以我都会准备好，然后我会让这些76个案子的缠诉，我让他们彻彻底底到另外一个阶段去。
 
-当时苏联搞过一个军事演习，叫西方-81号军事演习。当时说是20万大军拉练，人类战争史上最牛叉的、最大规模的一次军事演习。调集了苏联红军所有的军队，所有的（演习）整完以后，这场陆海空多兵种军事演习，（起初）说是20万，最后证明是60万大军。
-
-这次美国和苏联整个（模拟）较量以后，美国彻底惨败。可把欧洲吓坏了，就这种希特勒和斯大林崇拜的军事暴力美学，也是共产党崇拜的，通过这次军演达到了极致。坦克装甲部队、潜水艇、机械化部队全面参与，苏联的20万大军，瞬间就能把欧洲碾平。
-
-把欧洲吓得真的是浑身发抖啊，这可怎么战呢？欧洲根本战不了，就找美国来了。俄罗斯这个战斗民族不是吹出来的，也不是盖出来的，把欧洲绝对是吓趴下了。美国人给的答案非常简单，咱是打不过它，美国人就这么真实。
-
-所以，后来美国就有了所谓新的军事技术，太空飞机、无人机、B2等。当时出了两个将军，这个哥们是个牛叉的人，美国、苏联军队（历史）上最牛叉的设计师，还有他的博物馆。他把战争这个东西玩到了极致。他的学生是谁呀？叫列昂尼德·伊瓦绍夫，是原苏联的副总参谋长、国防部部长助理和地缘政治学院院长。
-
-这次在普京离开北京后，他公开发声要求普京辞职。他说，你以俄罗斯的政治前途和国家安全为代价，就想跟乌克兰打仗。而且他明确地说，你跟美国打没门儿，你是打不过的。他没有提及中共国。但是，私下里他说，（普京）和中共国的沟通、勾兑，玩所谓的国际三角关系，还有（普习）个人领导关系，你就连个狼狈为奸都配不上，就是一场肮脏的老鼠和狮子的游戏。（中共国的事情）让人情何以堪呐？
-
-资料来源：[2022年2月9日 文贵大直播](https://gettr.com/streaming/ptgw8b5f32)
-发布：tianzhihuan
-
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+所以说兄弟姐妹们，这是第三个大事，因为今天法律程序没完，我在等着，等着今天PAG关于那天的开庭，初二的开庭结果出来，然后我的法律程序再进行完，就开始对PAG真正的全面作战全面开始，让这些片PAG所有案子的揭开，对美国司法的腐败，对美国黑暗控制、黑金的一个全面的，对西方的蓝金黄的一个大战，揭露的开始。
 
  
 
