--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,41 +1,35 @@
 ---
-title: 诺贝尔医学奖得主 Luc Montagnier 教授去世的消息未被证实
+title: 2月9日大直播后记：独裁国家政权都崇拜暴力美学
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1981981/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1982031/)
 
-撰稿：小雨
-![](https://assets.gnews.org/wp-content/uploads/2022/02/FWU374ZYKL66EM5YPUEIP2IDCQ-1.jpg)网络图片
-12小时之前，社交媒体上传播着2008 年诺贝尔医学奖得主 Luc Montagnier 教授过世的消息。但到目前为止，还没有官方消息或其他法国和国际媒体证实这一消息。
+整理：清水冷香 Lucy Liu
+编辑：文泓
 
-法国网站France Soir在Twitter2 月9日上发布如下推文：
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/15-2.png)图片来源：墨尔本雅典娜农场设计组
 
-“*2008 年诺贝尔医学奖得主 Luc Montagnier 教授于 2022 年 2 月 8 日在他的孩子们面前安详地去世。*
-*1932 年 8 月 18 日 – 2022 年 2 月 8 日*
 
-*愿这位伟人的灵魂安息！*”
+这次北京冬奥会的“以假为真”，历史上的苏联也一样。在1935年和1980年两届奥运会，你问当时参加的（国家），哇塞，它们都太伟大了！这种力量没人能改变，谁也干不了它（独裁国家）。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-971.png)[推特链接](https://twitter.com/france_soir/status/1491361948407336971)
+当时苏联搞过一个军事演习，叫西方-81号军事演习。当时说是20万大军拉练，人类战争史上最牛叉的、最大规模的一次军事演习。调集了苏联红军所有的军队，所有的（演习）整完以后，这场陆海空多兵种军事演习，（起初）说是20万，最后证明是60万大军。
 
-网站France Soir在几小时后发布了一篇悼文：
+这次美国和苏联整个（模拟）较量以后，美国彻底惨败。可把欧洲吓坏了，就这种希特勒和斯大林崇拜的军事暴力美学，也是共产党崇拜的，通过这次军演达到了极致。坦克装甲部队、潜水艇、机械化部队全面参与，苏联的20万大军，瞬间就能把欧洲碾平。
 
-*Luc Montagnier 教授（1932 年 8 月 18 日 – 2022 年 2 月 8 日），在塞纳河畔纳伊的美国医院去世，享年89岁。教授最忠实的合作者之一 Gérard Guillaume 医生告诉我们，Luc Montagnier 教授在孩子们的陪伴下平静地离开了。*
+把欧洲吓得真的是浑身发抖啊，这可怎么战呢？欧洲根本战不了，就找美国来了。俄罗斯这个战斗民族不是吹出来的，也不是盖出来的，把欧洲绝对是吓趴下了。美国人给的答案非常简单，咱是打不过它，美国人就这么真实。
 
-*Luc Montagnier 教授是一位生物学家和病毒学家，最重要的是，教授还是一位为科学而活的具有非凡智慧的人。除了因发现艾滋病病毒而获得 2008 年诺贝尔医学奖外，教授还与世界上最伟大的科研机构一起工作。Luc Montagnier 教授担任 CNRS名誉研究主任，巴斯德研究所教授，纽约城市大学皇后学院分子与细胞生物学中心主任，上海交通大学研究所所长。多年来，Luc Montagnier 教授通过研究支持了科学院和美国国家医学院。为此，他获得了无数的奖项和荣誉。*
+所以，后来美国就有了所谓新的军事技术，太空飞机、无人机、B2等。当时出了两个将军，这个哥们是个牛叉的人，美国、苏联军队（历史）上最牛叉的设计师，还有他的博物馆。他把战争这个东西玩到了极致。他的学生是谁呀？叫列昂尼德·伊瓦绍夫，是原苏联的副总参谋长、国防部部长助理和地缘政治学院院长。
 
-*尽管Luc Montagnier 教授年事已高，尽管他在人生的晚年遭受了所有批评，尤其是来自科学界的一部分，但教授一直为自由科学而奋斗。我们很幸运能够在 FranceSoir 多次接待他，并希望将所有荣誉都授予他。*
+这次在普京离开北京后，他公开发声要求普京辞职。他说，你以俄罗斯的政治前途和国家安全为代价，就想跟乌克兰打仗。而且他明确地说，你跟美国打没门儿，你是打不过的。他没有提及中共国。但是，私下里他说，（普京）和中共国的沟通、勾兑，玩所谓的国际三角关系，还有（普习）个人领导关系，你就连个狼狈为奸都配不上，就是一场肮脏的老鼠和狮子的游戏。（中共国的事情）让人情何以堪呐？
 
-曾邀请Luc Montagnier 教授参加米兰示威活动的参议员 Gianluigi Paragone 在他的 Facebook 个人资料中谈到了这件事。他表示对此也知之甚少或一无所知：“我无法确认或否认。我只知道几天来我们一直试图与他的随行人员取得联系，但我们没有成功。”
+资料来源：[2022年2月9日 文贵大直播](https://gettr.com/streaming/ptgw8b5f32)
+发布：tianzhihuan
 
-**简评：**
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
-今天读到此消息，只有震惊，也有不少的猜想。过去两年中，高龄的Luc Montagnier 教授到处奔波做演讲和接受采访，宣传病毒和疫苗的真相，用自己的学术声望去试图唤醒被洗脑的民众。我们钦佩Luc Montagnier 教授的学识和人品，从教授身上我们看到一个真正尊重科学和真理的学者和科学家。
-
-希望是虚惊一场。无论如何，我们为Luc Montagnier 教授祈祷。
-
-新闻链接：[Yellow on Luc Montagnier, guru of no vax. France Soir: “He’s dead”. But there are no confirmations](https://www.unionesarda.it/en/yellow-on-luc-montagnier-guru-of-no-vax-france-soir-he39-s-dead-but-there-are-no-confirmations-sc5q6ize)
-
-[L’éminent professeur Luc Montagnier s’est éteint le 8 février 2022](https://www.francesoir.fr/societe-sante/leminent-professeur-luc-montagnier-sest-eteint-le-8-fevrier-2022)
-![](https://assets.gnews.org/wp-content/uploads/2022/02/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
