--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 非常可怕的事情是中国人不尊敬中国人
+title: 资本的亲爹就是利益
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1988496/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1988591/)
 
 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王
 视频定位：BENJ1，WEI
