--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 现在的冬奥会和大清朝的对比
+title: 越是自卑的人表现越强大
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1988481/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1988558/)
 
 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王
 视频定位：BENJ1，WEI
