--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 资本的亲爹就是利益
+title: 习近平的冬奥开幕式相由心生充满了恐惧
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1988591/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1988657/)
 
 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王
 视频定位：BENJ1，WEI
