--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,7 +1,7 @@
 ---
-title: 现在的冬奥会和大清朝的对比
+title: 美国的基础不能破坏
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1988481/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1988539/)
 
 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王
 视频定位：BENJ1，WEI
