--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,7 +1,7 @@
 ---
-title: PayPal跟Hpay那是几个级别的差距
+title: 冬奥会开幕式嘉宾都是七哥好朋友
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1988586/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1988628/)
 
 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王
 视频定位：BENJ1，WEI
