--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,7 +1,7 @@
 ---
-title: 美国整体的经济崩溃还没到
+title: 习近平的冬奥开幕式离不开盘古
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1988547/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1988622/)
 
 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王
 视频定位：BENJ1，WEI
