--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 中共一切都是假跟骗
+title: PAG案子一定要找到真相
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1990994/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1991063/)
 
 台灣寶島農場
 
