--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,7 +1,7 @@
 ---
-title: 不当使用公权力
+title: 七哥不会让战友捐一分钱
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1991142/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1991166/)
 
 台灣寶島農場
 
