--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: 中国人相信谎言， 而且维护谎言
+title: 共产党改变全世界游戏规则
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992739/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992823/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
