--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党改变全世界游戏规则
+title: 揭露疫苗真相为我们带来很多朋友
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992823/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992844/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
