--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,7 +1,7 @@
 ---
-title: 谷爱凌母女欺骗全世界还想当英雄
+title: 瑞银UBS中国牌照
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992833/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992923/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
